# platform.core.location.libslp-location

./: AUTHORS  Makefile.am  autogen.sh  configure.ac  location.pc.in  project.config
TC/: _export_env.sh  _export_target_env.sh  build.sh  config  excute.sh  tet_scen
TC/unit/: Makefile  stc_gps_nmea.c  stc_gps_position.c  stc_gps_satellite.c  stc_gps_velocity.c  stc_gps_zone.c  tslist  utc_location_free.c  utc_location_get_address.c  utc_location_get_address_from_position.c  utc_location_get_last_known_position.c  utc_location_get_last_position.c  utc_location_get_last_satellite.c  utc_location_get_last_velocity.c  utc_location_get_position.c  utc_location_get_position_from_address.c  utc_location_get_position_from_freeformed_address.c  utc_location_get_satellite.c  utc_location_get_velocity.c  utc_location_init.c  utc_location_new.c  utc_location_search_poi.c  utc_location_start.c  utc_location_stop.c  utc_properties_boundary.c  utc_properties_last_position.c  utc_properties_method.c  utc_signals_service_disabled.c  utc_signals_service_enabled.c  utc_signals_service_updated.c  utc_signals_zone_in.c  utc_signals_zone_out.c
debian/: changelog  control  libslp-location-dev.install  libslp-location.postinst  rules
image/: SLP_Location_PG.h
location/: Makefile.am  location-accuracy.c  location-accuracy.h  location-address.c  location-address.h  location-boundary.c  location-boundary.h  location-common-util.c  location-common-util.h  location-cps.c  location-cps.h  location-geocode.c  location-geocode.h  location-gps.c  location-gps.h  location-hybrid.c  location-hybrid.h  location-ielement.c  location-ielement.h  location-ips.c  location-ips.h  location-log.h  location-module-internal.c  location-module-internal.h  location-module.h  location-poi-info.c  location-poi-info.h  location-poi.c  location-poi.h  location-position.c  location-position.h  location-satellite.c  location-satellite.h  location-setting.c  location-setting.h  location-signaling-util.c  location-signaling-util.h  location-sps.c  location-sps.h  location-types.h  (+6 more)
location/include/: location-log.h  location-map-types.h  location-types.h
location/manager/: Makefile.am  location-accuracy.c  location-accuracy.h  location-boundary.c  location-boundary.h  location-common-util.c  location-common-util.h  location-cps.c  location-cps.h  location-gps.c  location-gps.h  location-hybrid.c  location-hybrid.h  location-ielement.c  location-ielement.h  location-ips.c  location-ips.h  location-marshal.list  location-position.c  location-position.h  location-satellite.c  location-satellite.h  location-setting.c  location-setting.h  location-signaling-util.c  location-signaling-util.h  location-sps.c  location-sps.h  location-velocity.c  location-velocity.h  location-wps.c  location-wps.h  location.c  location.h
location/map-service/: Makefile.am  location-address.c  location-address.h  location-geocode.c  location-geocode.h  location-landmark-ext.h  location-landmark.c  location-landmark.h  location-map-ielement.c  location-map-ielement.h  location-map-pref.c  location-map-pref.h  location-map-service-ext.h  location-map-service.c  location-map-service.h  location-poi.c  location-poi.h  location-pref.c  location-pref.h  location-route-ext.h  location-route.c  location-route.h  map-internal.c  map-internal.h  map-service.c  map-service.h
location/module/: Makefile.am  location-module.h  module-internal.c  module-internal.h
packaging/: libslp-location.changes  libslp-location.spec
tests/: Makefile.am  address-sample.c  cps-test.c  gps-test.c  hybrid-test.c  ips-test.c  location-api-test-util.c  location-api-test-util.h  location-api-test.c  location-api-test.json  map-service-test.c  nmea-sample.c  position-sample-gps.c  property-sample.c  satellite-sample.c  sps-test.c  velocity-sample.c  wps-test.c  zone-sample.c
